--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@testing-library/user-event": "7.2.1",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.5.3",
+    "body-parser": "^1.19.0",    
     "caniuse-lite": "^1.0.30001164",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
@@ -24,12 +23,12 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.13",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.4.0",
+    "react": "^16.13.1",   
     "react-dom": "^16.13.1",
     "react-redux": "7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "concurrently": "^5.0.2"
